Add contnet and style

--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="utf-8">
     <link href="./styles.css" rel="stylesheet">
+    <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <title>Franco Moliterni</title>
   </head>
   <body>
-    <div>
+    <div class="header">
+      <h1>Franco Moliterni</h1>
       <img class="picture" src="./assets/franco_stilizzata.png" />
+    </div>
+    <div class="main">
+      <h3>Scarica i libri</h3>
+      <ul>
+        <li><a href="./assets/Guida al Villaggio Saraceno - Franco Moliterni.pdf">Guida al Villaggio Saraceno</a></li>
+        <li><a href="./assets/Civiltà rupestre a Matera - Franco Moliterni.pdf">Civiltà rupestri a Matera</a></li>
+      </ul>
     </div>
   </body>
 </hmtl>
