--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <div class="main">
     <h3>Scarica i libri</h3>
     <ul>
-      <li><a href="./assets/Guida al Villaggio Saraceno - Franco Moliterni.pdf">Guida al Villaggio Saraceno</a></li>
-      <li><a href="./assets/Civiltà rupestre a Matera - Franco Moliterni.pdf">Civiltà rupestri a Matera</a></li>
+      <li><a class="link" href="./assets/Guida al Villaggio Saraceno - Franco Moliterni.pdf"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><style>svg{fill:#ffffff}</style><path d="M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM216 232V334.1l31-31c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-72 72c-9.4 9.4-24.6 9.4-33.9 0l-72-72c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l31 31V232c0-13.3 10.7-24 24-24s24 10.7 24 24z"/></svg></span> <span>Guida al Villaggio Saraceno</span></a></li>
+      <li><a class="link" href="./assets/Civiltà rupestre a Matera - Franco Moliterni.pdf"><span class="icon"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><style>svg{fill:#ffffff}</style><path d="M64 0C28.7 0 0 28.7 0 64V448c0 35.3 28.7 64 64 64H320c35.3 0 64-28.7 64-64V160H256c-17.7 0-32-14.3-32-32V0H64zM256 0V128H384L256 0zM216 232V334.1l31-31c9.4-9.4 24.6-9.4 33.9 0s9.4 24.6 0 33.9l-72 72c-9.4 9.4-24.6 9.4-33.9 0l-72-72c-9.4-9.4-9.4-24.6 0-33.9s24.6-9.4 33.9 0l31 31V232c0-13.3 10.7-24 24-24s24 10.7 24 24z"/></svg></span> <span>Civiltà rupestri a Matera</span></a></li>
     </ul>
   </div>
 </body>
